--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +40,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.1.1"
   }
 }
